Fix botched merge in http://crrev.com/984e315.

BUG=593186
TBR=szager

Review URL: https://codereview.chromium.org/1782963003 .

Cr-Commit-Position: refs/branch-heads/2623@{#610}
Cr-Branched-From: 92d77538a86529ca35f9220bd3cd512cbea1f086-refs/heads/master@{#369907}