third_party/WebKit/Source/platform/scroll/ScrollAnimatorCompositorCoordinator.h
@@ -6,6 +6,7 @@
 #define ScrollAnimatorCompositorCoordinator_h
 
 #include "platform/PlatformExport.h"
+#include "platform/geometry/FloatPoint.h"
 #include "platform/heap/Handle.h"
 #include "public/platform/WebCompositorAnimationDelegate.h"
 #include "public/platform/WebCompositorAnimationPlayerClient.h"
